--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
+    <LangVersion>8.0</LangVersion>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -9,7 +9,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{1EDD9D92-DC19-2903-8FF9-21A6835B19EC}</ProjectGuid>
+    <ProjectGuid>{9AC8BEB6-3E81-C413-FCE7-EEB044365F7F}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <AssemblyName>Assembly-CSharp</AssemblyName>
@@ -53,16 +53,19 @@
     <UnityVersion>2020.3.16f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Compile Include="Assets\Scripts\PlayerController.cs" />
-    <Compile Include="Assets\Scripts\FollowTarget.cs" />
-    <Compile Include="Assets\Scripts\EnemyController.cs" />
-    <Compile Include="Assets\Scripts\QuitOrNext.cs" />
+    <Analyzer Include="C:\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Extensions\Microsoft\Visual Studio Tools for Unity\Analyzers\Microsoft.Unity.Analyzers.dll" />
+  </ItemGroup>
+  <ItemGroup>
     <Compile Include="Assets\Scripts\Bullet.cs" />
-    <Compile Include="Assets\Scripts\GameOver.cs" />
+    <Compile Include="Assets\Scripts\PlayerController.cs" />
     <Compile Include="Assets\Scripts\Data.cs" />
     <Compile Include="Assets\Scripts\ShowScore.cs" />
     <Compile Include="Assets\Scripts\AutoReplay.cs" />
+    <Compile Include="Assets\Scripts\EnemyController.cs" />
+    <Compile Include="Assets\Scripts\FollowTarget.cs" />
+    <Compile Include="Assets\Scripts\GameOver.cs" />
     <Compile Include="Assets\Scripts\SoundManager.cs" />
+    <Compile Include="Assets\Scripts\QuitOrNext.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
@@ -638,127 +641,127 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="Unity.2D.Animation.Editor.csproj">
-      <Project>{AF8755B9-AF32-C17E-CFE4-0F0D218BA199}</Project>
+      <Project>{396AF1A4-DE56-6C7D-EAD7-0CC829CBDA02}</Project>
       <Name>Unity.2D.Animation.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.InternalAPIEngineBridge.001.csproj">
-      <Project>{036C916B-4D0B-91E6-A41C-656DD2F2FBC2}</Project>
+      <Project>{D0CBDE37-4F1F-93FE-B608-343A18ACC0F9}</Project>
       <Name>Unity.InternalAPIEngineBridge.001</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.VSCode.Editor.csproj">
-      <Project>{57F8DB5E-310A-EAA0-A5EB-44EE9EF96634}</Project>
+      <Project>{E08ADCC4-5C15-B9E6-380C-02F25B1CBC89}</Project>
       <Name>Unity.VSCode.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.PixelPerfect.csproj">
-      <Project>{4816C340-8C4E-859A-FF67-00A9D5BC0903}</Project>
+      <Project>{CD4C9C37-549D-8FE5-66AC-FB843AC54FFF}</Project>
       <Name>Unity.2D.PixelPerfect</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Tilemap.Editor.csproj">
-      <Project>{C504C2CD-099D-4226-0DFF-EFC603753C4C}</Project>
+      <Project>{5A2299BB-44D2-83E7-55A1-D455580BB5F4}</Project>
       <Name>Unity.2D.Tilemap.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="com.unity.quicksearch.csproj">
-      <Project>{B74D69C0-D5E4-7691-17AC-6032091797BE}</Project>
+      <Project>{88FE8F52-FAB3-6047-3A76-10EDE1A77ADF}</Project>
       <Name>com.unity.quicksearch</Name>
     </ProjectReference>
     <ProjectReference Include="PsdPlugin.csproj">
-      <Project>{C47ADE14-D6E7-DC6E-D5B9-5E105E2CEE68}</Project>
+      <Project>{D912AA88-CFE0-28A2-2E08-989CD83E5F9E}</Project>
       <Name>PsdPlugin</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.TextMeshPro.Editor.csproj">
-      <Project>{E3561CB8-E208-6695-53F0-79DC98E1743B}</Project>
+      <Project>{8FDBCC8B-0223-8E2D-EA3E-54C96BBA685C}</Project>
       <Name>Unity.TextMeshPro.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.VisualStudio.Editor.csproj">
-      <Project>{5D287BC9-606C-46E7-D142-DFB940B1F663}</Project>
+      <Project>{DED05CAA-C8CC-6F7F-B96D-8D876D99B02B}</Project>
       <Name>Unity.VisualStudio.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.Timeline.csproj">
-      <Project>{5DBA23C3-314F-606D-9FD0-1F9C5D6B51D8}</Project>
+      <Project>{2667FCE4-CCB2-12B0-5CC3-4CEFE85A72EB}</Project>
       <Name>Unity.Timeline</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.TextMeshPro.csproj">
-      <Project>{36DDC2BF-7798-DD81-7D9F-5CA4C9CBFEFF}</Project>
+      <Project>{20F39F9F-CC1B-8F78-B1A0-39A87237B206}</Project>
       <Name>Unity.TextMeshPro</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.IK.Editor.csproj">
-      <Project>{6E95A5E1-A77A-2B59-D86B-61D340AD8E5F}</Project>
+      <Project>{98A83FF7-E483-F6E6-9CDB-C9CF33833DA8}</Project>
       <Name>Unity.2D.IK.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Sprite.Editor.csproj">
-      <Project>{8C62050E-5235-94C9-B7C2-C17A4CE5D9FD}</Project>
+      <Project>{1EB8E2A8-96F0-A78A-A1D6-9D3CBDF24310}</Project>
       <Name>Unity.2D.Sprite.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Psdimporter.Editor.csproj">
-      <Project>{E3A0FA45-712B-CC70-ABF5-96AE1A635C44}</Project>
+      <Project>{19D9AF6B-DF9D-7A25-D8A5-20D2F388AD41}</Project>
       <Name>Unity.2D.Psdimporter.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Path.Editor.csproj">
-      <Project>{D88B5606-AF42-1C39-0C46-304E63EA9895}</Project>
+      <Project>{7E1F180B-690D-51A1-8333-20848A9A1BBE}</Project>
       <Name>Unity.2D.Path.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.InternalAPIEditorBridge.001.csproj">
-      <Project>{D430EDA1-BA9D-C2A1-C06F-6DD6C0140443}</Project>
+      <Project>{46056296-16A6-017E-B62D-1647DB78C736}</Project>
       <Name>Unity.InternalAPIEditorBridge.001</Name>
     </ProjectReference>
     <ProjectReference Include="UnityEditor.UI.csproj">
-      <Project>{D7E7AA6B-D976-8CDF-65FB-1C2657FE9E6B}</Project>
+      <Project>{F07D918B-FC2E-022C-34BA-4D83A3963E08}</Project>
       <Name>UnityEditor.UI</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.PlasticSCM.Editor.csproj">
-      <Project>{7021A89E-1099-BAEE-DF86-D74558A89D47}</Project>
+      <Project>{8D8C121C-537F-C3DF-9CA5-A6EFA5B825FF}</Project>
       <Name>Unity.PlasticSCM.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.Rider.Editor.csproj">
-      <Project>{618DBA96-9E4B-696C-6A8D-2A26FCF67ECF}</Project>
+      <Project>{6231F332-04DB-4929-8CAE-A58F2706EF6F}</Project>
       <Name>Unity.Rider.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="UnityEngine.UI.csproj">
-      <Project>{6040513E-62A6-1238-1C18-F968B1834137}</Project>
+      <Project>{2BCD4A29-6192-523A-BCBC-A31E8A5B0F89}</Project>
       <Name>UnityEngine.UI</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.Mathematics.csproj">
-      <Project>{E0086160-4CBF-0041-5933-A892E0173340}</Project>
+      <Project>{AD0D7226-0D81-783B-3781-3209533AA82D}</Project>
       <Name>Unity.Mathematics</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.IK.Runtime.csproj">
-      <Project>{5F5FB359-990B-C1E3-EFB4-738F5875FEA0}</Project>
+      <Project>{EE9FCEEC-86DF-705E-6C99-E6D506445A3B}</Project>
       <Name>Unity.2D.IK.Runtime</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Animation.Triangle.Runtime.csproj">
-      <Project>{AD86EDF2-7CFF-83B7-5D1C-11478C86007C}</Project>
+      <Project>{EA18025D-9327-FE27-3F60-E58107460965}</Project>
       <Name>Unity.2D.Animation.Triangle.Runtime</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Animation.Runtime.csproj">
-      <Project>{AA98A268-639A-6C99-4E83-826902F8EC10}</Project>
+      <Project>{CA31B564-C8D0-3A1B-9765-5BEFA29ECDD3}</Project>
       <Name>Unity.2D.Animation.Runtime</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.PixelPerfect.Editor.csproj">
-      <Project>{42A0D65D-8057-6DD2-6BB7-4F649FCBB05E}</Project>
+      <Project>{2330F0F2-AAC0-1F2A-946D-8CDDF10E5A1B}</Project>
       <Name>Unity.2D.PixelPerfect.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.Timeline.Editor.csproj">
-      <Project>{9CB2DF19-6132-081D-057C-6E5451D41A78}</Project>
+      <Project>{D7748FB6-4782-2CE7-C48C-C92E86178697}</Project>
       <Name>Unity.Timeline.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.Mathematics.Editor.csproj">
-      <Project>{41B81AE3-AB9A-DD94-D425-9F8B3D32FE73}</Project>
+      <Project>{2E7BFAF8-6338-26E6-E602-9B3034C02316}</Project>
       <Name>Unity.Mathematics.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Common.Runtime.csproj">
-      <Project>{0E346B36-6C04-CFDA-8C8F-2A344CEB4CAA}</Project>
+      <Project>{34B3EA83-F68A-D07A-0103-1CD3B8C5FC19}</Project>
       <Name>Unity.2D.Common.Runtime</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.SpriteShape.Editor.csproj">
-      <Project>{4D01350C-2845-B4FA-E907-ED0BB75D59AD}</Project>
+      <Project>{E247B275-C6B3-3E29-D056-2B25DDDBC8FD}</Project>
       <Name>Unity.2D.SpriteShape.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.Common.Editor.csproj">
-      <Project>{B8D37589-D87A-5C6B-B337-CDE4749651FE}</Project>
+      <Project>{7E213E90-FB92-DBA3-D784-58E7FFD131FC}</Project>
       <Name>Unity.2D.Common.Editor</Name>
     </ProjectReference>
     <ProjectReference Include="Unity.2D.SpriteShape.Runtime.csproj">
-      <Project>{2E1A9C3F-983C-526A-C7C4-1F72785D12D5}</Project>
+      <Project>{97E2B601-E58A-52F7-94F3-2B04A6A79A95}</Project>
       <Name>Unity.2D.SpriteShape.Runtime</Name>
     </ProjectReference>
   </ItemGroup>
